# badgify

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  fly.production.toml  fly.toml
.github/workflows/: ci.yml
src/: evm_chainlist.rs  lib.rs  main.rs  types.rs  utils.rs
src/badge/: mod.rs  shields_io.rs  shields_io_data.rs
src/data_source/: bitcoin.rs  bitcoing_metadata.rs  evm.rs  evm_metadata.rs  mod.rs
src/query/: bitcoin.rs  evm.rs  mod.rs
src/services/: api.rs  badge.rs  mod.rs  scanner.rs
tests/: query_test.rs  utils_test.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/components/: badge-generator.tsx  chain-selector.tsx  crypto-shield.tsx  intro-page.tsx
ui/src/components/ui/: copyable-input.tsx
ui/src/lib/: utils.ts
