[package]
name = "marketh"
version = "0.1.0"
edition = "2021"

[lib]
name = "marketh_rs"

[[bin]]
name = "marketh"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
alloy = { version = "0.5.4", features = ["full"] }
image = "0.24.4"
imageproc = "0.23.0"
num = "0.4"
once_cell = "1.20"
reqwest = "0.12.9"
rusttype = "0.9.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
